<resources>
    <string name="app_name">Habits Tracker</string>
    <string name="default_title_hint">Enter a title for the habit.</string>
    <string name="habit_title_label">Title</string>
    <string name="habit_details_label">Details</string>
    <string name="habit_daily_done">Habit done today?</string>
    <string name="new_habit">New Habit</string>
    <string name="add_new_habit">Add new habit</string>
    <string name="habit_date">Habit Date</string>
    <string name="channel_name">New habit notification</string>
    <string name="channel_description">New habit!</string>
    <string name="example_habit_date">18 October, 2021</string>
    <string name="habit_partner_text">Choose habit partner</string>
    <string name="share_progress_text">Share progress</string>
    <string name="habit_report">%1$s! The habit was discovered on %2$s. %3$s, and %4$s</string>
    <string name="progress_report_success">Habit being done successfully</string>
    <string name="progress_report_failure">Habit has failed</string>
    <string name="habit_report_no_partner">there is no habit partner.</string>
    <string name="habit_report_partner">the partner is %s.</string>
    <string name="habit_report_subject">Habits Tracker Report</string>
    <string name="send_report">Send habit report via</string>
    <string name="notification_channel_name">Long process notification</string>
    <string name="long_proccess_title">Really long process…</string>
    <string name="long_proccess_text">longlonglong</string>
    <string name="start_polling">Start polling</string>
    <string name="stop_polling">Stop polling</string>
    <string name="habit_image">Habit image</string>
    <string name="take_photo_button">Take photo</string>
</resources>