<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/habit_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:contentDescription="@string/habit_image" />

            <ImageButton
                android:id="@+id/habit_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"
                android:contentDescription="@string/take_photo_button" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/habit_title_label" />

            <EditText
                android:id="@+id/habit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Title"
                android:hint="@string/default_title_hint"
                android:inputType="textShortMessage"
                android:minHeight="48dp"
                android:textColorHint="#757575" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habit_details_label" />

    <Button
        android:id="@+id/habit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/example_habit_date" />

    <CheckBox
        android:id="@+id/habit_daily_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habit_daily_done" />

    <Button
        android:id="@+id/habit_partner_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habit_partner_text" />

    <Button
        android:id="@+id/share_progress_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_progress_text" />
</LinearLayout>